[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Interface/SpritesBiblioteca/sala de aula fundo.jpg" type="Texture" id=1]
[ext_resource path="res://Scenes/SalaCC.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Interface/SpritesBiblioteca/BotaoCarreira.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Interface/SpritesBiblioteca/BotaoUniversidade.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Interface/SpritesBiblioteca/BotaoÁreaDeTrabalho.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Interface/SpritesBiblioteca/BotaoInstagram.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Interface/Menu/BotãoX.png" type="Texture" id=7]


[node name="Node2D" type="Node2D"]
position = Vector2( -407, -158 )
scale = Vector2( 2.60528, 2.28504 )
script = ExtResource( 2 )

[node name="SalaDeAulaFundo" type="Sprite" parent="."]
position = Vector2( 525, 304 )
scale = Vector2( 1.598, 1.374 )
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0.643137, 0.780392, 0.219608, 1 )
margin_left = 419.0
margin_top = 149.0
margin_right = 888.0
margin_bottom = 372.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCC" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 512.0
margin_top = 327.0
margin_right = 826.0
margin_bottom = 361.0
text = "https://www.instagram.com/rafaballerini/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCarreiraCC" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 480.0
margin_top = 162.0
margin_right = 998.0
margin_bottom = 194.0
text = "https://www.guiadacarreira.com.br/guia-das-profissoes/ciencia-da-computacao/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonAreatrabCC" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 473.0
margin_top = 269.0
margin_right = 814.0
margin_bottom = 306.0
text = "https://www.youtube.com/watch?v=KHQzOQIGMow"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonUnivCC" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 472.0
margin_top = 220.0
margin_right = 805.0
margin_bottom = 252.0
text = "https://www.inteli.edu.br/ciencia-da-computacao/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotaoCarreira" type="Sprite" parent="."]
position = Vector2( 652, 179 )
scale = Vector2( 0.1, 0.08 )
texture = ExtResource( 3 )

[node name="BotaoUniversidade" type="Sprite" parent="."]
position = Vector2( 656, 195 )
scale = Vector2( 0.1, 0.08 )
texture = ExtResource( 4 )

[node name="BotaoáreaDeTrabalho" type="Sprite" parent="."]
position = Vector2( 659, 298 )
scale = Vector2( 0.1, 0.08 )
texture = ExtResource( 5 )

[node name="BotaoInstagram" type="Sprite" parent="."]
position = Vector2( 659, 354 )
scale = Vector2( 0.1, 0.08 )
texture = ExtResource( 6 )

[node name="ButtonVoltarCC" type="Button" parent="."]
margin_left = 847.0
margin_top = 100.0
margin_right = 877.0
margin_bottom = 130.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fecharbotao-removebg-preview" type="Sprite" parent="."]
position = Vector2( 862.479, 112.908 )
scale = Vector2( 0.0878725, 0.0721352 )
texture = ExtResource( 7 )

[connection signal="pressed" from="ButtonCC" to="." method="_on_ButtonCC_pressed"]
[connection signal="pressed" from="ButtonCarreiraCC" to="." method="_on_ButtonCarreiraCC_pressed"]
[connection signal="pressed" from="ButtonAreatrabCC" to="." method="_on_ButtonAreatrabCC_pressed"]
[connection signal="pressed" from="ButtonUnivCC" to="." method="_on_ButtonUnivCC_pressed"]
[connection signal="pressed" from="ButtonVoltarCC" to="." method="_on_ButtonVoltarCC_pressed"]
